# cbctrecon

./: .clang-format  .cmake-format.yaml  .gitignore  .gitlab-ci.yml  .travis.yml  .ycm_extra_conf.py  .ycm_extra_conf.py.in  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeSettings.json  DlgExternalCommand.cxx  DlgExternalCommand.h  DlgExternalCommand.ui  DlgRegistration.cxx  DlgRegistration.h  DlgRegistration.ui  README.md  SuperBuild.cmake  YK16GrayImage.cxx  YK16GrayImage.h  appveyor.yml  cbctrecon.cpp  cbctrecon.h  cbctrecon.ui  commit.sh  dcmtk_rtplan.h  form.h  main.cpp  qcustomplot.cpp  qcustomplot.h  qyklabel.cpp  qyklabel.h  rtplan.cxx
Applications/CbctRecon/: .clang_complete  .ycm_extra_conf.py.in  AG17RGBAImage.cxx  AG17RGBAImage.h  CMakeLists.txt  CMakeLists.txt~  CMakeSetup.aps  CMakeSetup.rc  DlgExternalCommand.cxx  DlgExternalCommand.h  DlgExternalCommand.ui  DlgHistogram.cxx  DlgHistogram.h  DlgHistogram.ui  DlgRegistration.cxx  DlgRegistration.h  DlgRegistration.ui  OpenCLFFTFilter.cxx  OpenCLFFTFilter.h  PlmWrapper.cxx  PlmWrapper.h  StructureSet.cxx  StructureSet.h  WEPL.cxx  WEPL.h  YK16GrayImage.cxx  YK16GrayImage.h  cbctrecon.cpp  cbctrecon.cpp~RF1a0f8906.TMP  cbctrecon.cpp~RF1a2421ba.TMP  cbctrecon.cpp~RF1a3a44e7.TMP  cbctrecon.cpp~RF1ab6b47f.TMP  cbctrecon.h  cbctrecon.h~RF1a0f88d7.TMP  cbctrecon.h~RF1a24219b.TMP  cbctrecon.h~RF1a3a44d8.TMP  cbctrecon.ui  cbctrecon_compute.cxx  cbctrecon_compute.h  cbctrecon_config.h.in  (+34 more)
Applications/CbctRecon/cmake/: WindeployQt.cmake
Applications/CbctRecon/extra/nsis/: NSIS.definitions.nsh.in
Applications/CbctRecon/extra/windows-install/: colormap_customgamma.txt  colormap_jet.txt
Applications/CbctRecon/extra/wix/: README  cmake_extra_dialog.wxs  install_dir.wxs  patch_start_menu.xml  start_menu.wxs
Applications/CbctRecon/qt-utils/: AG17RGBAImage.cxx  AG17RGBAImage.h  YK16GrayImage.cxx  YK16GrayImage.h  qcustomplot.cpp  qtwrap.h  qyklabel.cpp  qyklabel.h
Applications/CbctRecon/rtkExtension/: itkOpenCLImageToImageFilter.h  rtkOpenCLFDKBackProjectionImageFilter.cxx  rtkOpenCLFDKBackProjectionImageFilter.h  rtkOpenCLFDKConeBeamReconstructionFilter.cxx  rtkOpenCLFDKConeBeamReconstructionFilter.h  rtkOpenCLFDKConeBeamReconstructionFilter.hxx  rtkOpenCLFFTConvolutionImageFilter.h  rtkOpenCLFFTConvolutionImageFilter.hxx  rtkOpenCLFFTRampImageFilter.h  rtkOpenCLUtilities.cxx  rtkOpenCLUtilities.h
Applications/CbctRecon/ui/: DlgRegistration.ui  cbctrecon.ui  cbctrecon.ui.autosave
Applications/TestOpenCL/: CMakeLists.txt  opencl_tester.cpp
Applications/gPMC/: CMakeLists.txt  gPMC.cpp  gPMC.ggo  gPMC3Doutputdose_section.ggo  gPMCVersion.ggo.in  range_modulator_data.hxx  readme.txt
Applications/gPMC/cmake/: ExternalProjectDependency.cmake  External_ITKv120.cmake  FindGengetopt.cmake  FindOpenMP.cmake  nvcc-check.cmake
Applications/gPMC/include/: goPMC.h
CbctRecon/: CMakeLists.txt  cbctrecon.h
Examples/: CMakeLists.txt  CbctReconVersion.ggo.in  apply_affine.cpp  bigart.cpp  onthefly_recon.cpp  onthefly_recon.ggo
Testing/: .ycm_extra_conf.py.in  CMakeLists.txt  CTestCustom.cmake.in  MyQComboBox.hxx  bigart.cpp  cbctrecon_test.cpp  cbctrecon_test.h  cbctrecon_test.hpp  cbctregistration_test.cpp  cbctregistration_test.hpp  ctest_setup.cmake  readme.txt  test_cb_reader.cpp  test_dcm_reader.cpp  test_end_to_end.cpp  test_forwardprojection.cpp  test_opencl_filter.cpp
Testing/Baseline/Alderson/: CBproj.mha.md5  CBproj.mha.sha512
Testing/Input/Alderson/: CBCT.tar.gz.md5  CBCT.tar.gz.sha512  CT.tar.gz.md5  CT.tar.gz.sha512
Testing/Input/Alderson/CBCT/: Scan.xml.sha512  backup  test
Testing/Input/Alderson/CBCT/Acquisitions/746879825/: Proj_00000.xim.md5  Proj_00000.xim.sha512  Proj_00001.xim.md5  Proj_00001.xim.sha512  Proj_00002.xim.md5  Proj_00002.xim.sha512  (+998 more)
Testing/Input/Alderson/CT/: CT.1.2.840.113704.1.111.3048.1341303733.195.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303733.195.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303733.196.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303733.196.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303733.197.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303733.197.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303733.198.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303733.198.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303733.199.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303733.199.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303734.200.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303734.200.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303734.201.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303734.201.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303734.202.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303734.202.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303743.203.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303743.203.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303743.204.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303743.204.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303743.205.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303743.205.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303743.206.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303743.206.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303743.207.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303743.207.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303744.208.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303744.208.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303744.209.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303744.209.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303744.210.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303744.210.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303744.211.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303744.211.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303744.212.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303744.212.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303744.213.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303744.213.dcm.sha512  CT.1.2.840.113704.1.111.3048.1341303745.214.dcm.md5  CT.1.2.840.113704.1.111.3048.1341303745.214.dcm.sha512  (+360 more)
gPMC/: CMakeLists.txt  example.cpp  gPMC.cpp  gPMC.ggo
gPMC/include/: cl.hpp
(+168 files in other folders)
